Infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PowerBillManagementVPC8D023776": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PowerBillManagementVPC"
     }
    ]
   }
  },
  "PowerBillManagementVPCPublicSubnet1Subnet0CB9AA19": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet1RouteTableC77FC670": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet1RouteTableAssociation9289AFA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPublicSubnet1RouteTableC77FC670"
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPublicSubnet1Subnet0CB9AA19"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet1DefaultRoute23D9ED2C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PowerBillManagementVPCIGW023FEA23"
    },
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPublicSubnet1RouteTableC77FC670"
    }
   },
   "DependsOn": [
    "PowerBillManagementVPCVPCGWED42AF3B"
   ]
  },
  "PowerBillManagementVPCPublicSubnet1EIP6E108925": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PowerBillManagementVPCPublicSubnet1NATGatewayC4FC53D4": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PowerBillManagementVPCPublicSubnet1EIP6E108925",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPublicSubnet1Subnet0CB9AA19"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PowerBillManagementVPCPublicSubnet1DefaultRoute23D9ED2C",
    "PowerBillManagementVPCPublicSubnet1RouteTableAssociation9289AFA6"
   ]
  },
  "PowerBillManagementVPCPublicSubnet2Subnet0BFD7B8B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet2RouteTable6FB6845A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet2RouteTableAssociationBEFBBB5A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPublicSubnet2RouteTable6FB6845A"
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPublicSubnet2Subnet0BFD7B8B"
    }
   }
  },
  "PowerBillManagementVPCPublicSubnet2DefaultRoute13C816FE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PowerBillManagementVPCIGW023FEA23"
    },
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPublicSubnet2RouteTable6FB6845A"
    }
   },
   "DependsOn": [
    "PowerBillManagementVPCVPCGWED42AF3B"
   ]
  },
  "PowerBillManagementVPCPublicSubnet2EIP76A9FD37": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PowerBillManagementVPCPublicSubnet2NATGateway71C700A8": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PowerBillManagementVPCPublicSubnet2EIP76A9FD37",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPublicSubnet2Subnet0BFD7B8B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PowerBillManagementVPCPublicSubnet2DefaultRoute13C816FE",
    "PowerBillManagementVPCPublicSubnet2RouteTableAssociationBEFBBB5A"
   ]
  },
  "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet1RouteTableADD348C5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet1RouteTableAssociationF08322CF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet1RouteTableADD348C5"
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet1DefaultRouteA496502B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PowerBillManagementVPCPublicSubnet1NATGatewayC4FC53D4"
    },
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet1RouteTableADD348C5"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet2RouteTable414C90B2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PowerBillManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet2RouteTableAssociation430A9A94": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet2RouteTable414C90B2"
    },
    "SubnetId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02"
    }
   }
  },
  "PowerBillManagementVPCPrivateSubnet2DefaultRoute192B1107": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PowerBillManagementVPCPublicSubnet2NATGateway71C700A8"
    },
    "RouteTableId": {
     "Ref": "PowerBillManagementVPCPrivateSubnet2RouteTable414C90B2"
    }
   }
  },
  "PowerBillManagementVPCIGW023FEA23": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PowerBillManagementVPC"
     }
    ]
   }
  },
  "PowerBillManagementVPCVPCGWED42AF3B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PowerBillManagementVPCIGW023FEA23"
    },
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "PBCustomerServiceDBSubnetGroupC1577A31": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PB-CustomerServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C"
     },
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02"
     }
    ]
   }
  },
  "PBCustomerServiceDBSecurityGroupE448C9BD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PB-CustomerServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "localstackPBCustomerServiceDBSecretA07078143fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBCustomerServiceDBSecretAttachment8BAD241F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPBCustomerServiceDBSecretA07078143fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PBCustomerServiceDB164FAB3F"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PBCustomerServiceDB164FAB3F": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "pb-customer-service-db",
    "DBSubnetGroupName": {
     "Ref": "PBCustomerServiceDBSubnetGroupC1577A31"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPBCustomerServiceDBSecretA07078143fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PBCustomerServiceDBSecurityGroupE448C9BD",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBBillsServiceDBSubnetGroup75E08B13": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PB-BillsServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C"
     },
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02"
     }
    ]
   }
  },
  "PBBillsServiceDBSecurityGroup12F97E53": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PB-BillsServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "localstackPBBillsServiceDBSecret96FCAD613fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBBillsServiceDBSecretAttachment2BBA9B4B": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPBBillsServiceDBSecret96FCAD613fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PBBillsServiceDB5952D35D"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PBBillsServiceDB5952D35D": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "pb-bills-service-db",
    "DBSubnetGroupName": {
     "Ref": "PBBillsServiceDBSubnetGroup75E08B13"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPBBillsServiceDBSecret96FCAD613fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PBBillsServiceDBSecurityGroup12F97E53",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBAuthServiceDBSubnetGroupB8A02027": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PB-AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C"
     },
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02"
     }
    ]
   }
  },
  "PBAuthServiceDBSecurityGroup4BF96491": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PB-AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "localstackPBAuthServiceDBSecretBBAD62B43fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBAuthServiceDBSecretAttachment295B347D": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPBAuthServiceDBSecretBBAD62B43fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PBAuthServiceDBA11A92C4"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PBAuthServiceDBA11A92C4": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "pb-auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "PBAuthServiceDBSubnetGroupB8A02027"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPBAuthServiceDBSecretBBAD62B43fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PBAuthServiceDBSecurityGroup4BF96491",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBAnalyticsServiceDBSubnetGroup6566DA5A": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PB-AnalyticsServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet1Subnet41819B2C"
     },
     {
      "Ref": "PowerBillManagementVPCPrivateSubnet2Subnet74FE5B02"
     }
    ]
   }
  },
  "PBAnalyticsServiceDBSecurityGroup47A1FCBF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PB-AnalyticsServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PowerBillManagementVPC8D023776"
    }
   }
  },
  "localstackPBAnalyticsServiceDBSecretB6ACA6EB3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PBAnalyticsServiceDBSecretAttachmentE8186800": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPBAnalyticsServiceDBSecretB6ACA6EB3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PBAnalyticsServiceDBB3DE852B"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PBAnalyticsServiceDBB3DE852B": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "pb-analytics-service-db",
    "DBSubnetGroupName": {
     "Ref": "PBAnalyticsServiceDBSubnetGroup6566DA5A"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPBAnalyticsServiceDBSecretB6ACA6EB3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PBAnalyticsServiceDBSecurityGroup47A1FCBF",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "CustomerServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PBCustomerServiceDB164FAB3F",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PBCustomerServiceDB164FAB3F",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "BillsServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PBBillsServiceDB5952D35D",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PBBillsServiceDB5952D35D",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "AuthServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PBAuthServiceDBA11A92C4",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PBAuthServiceDBA11A92C4",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "AnalyticsServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PBAnalyticsServiceDBB3DE852B",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PBAnalyticsServiceDBB3DE852B",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  }
 }
}
